# base

./: .dockerignore  .gitignore  .gitleaks.toml  .goreleaser.yaml  .platform.yml  CHANGELOG.md  CHANGELOG_16_22.md  CHANGELOG_8_15.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  LLM.md  Makefile  NOTICE  README.md  SECURITY.md  SECURITY_AUDIT.md  base.go  base_test.go  compose.network.yml  conn_memory_test.go  go.mod  go.sum  modernc_versions_check.go  mount.go
.github/: SECURITY.md
apis/: api_error_aliases.go  backup.go  backup_create.go  backup_test.go  backup_upload.go  base.go  base_test.go  batch.go  batch_test.go  collection.go  collection_import.go  collection_import_test.go  collection_test.go  cron.go  cron_test.go  file.go  file_test.go  health.go  health_test.go  installer.go  logs.go  logs_test.go  middlewares.go  middlewares_body_limit.go  middlewares_body_limit_test.go  middlewares_cors.go  middlewares_gzip.go  middlewares_rate_limit.go  middlewares_rate_limit_test.go  middlewares_test.go  presence.go  private.go  private_test.go  realtime.go  realtime_test.go  record_auth.go  record_auth_email_change_confirm.go  record_auth_email_change_confirm_test.go  record_auth_email_change_request.go  record_auth_email_change_request_test.go  (+42 more)
cmd/: cli.go  cli_test.go  iam_user.go  iam_user_test.go  serve.go  superuser.go  superuser_test.go
core/: app.go  auth_origin_model.go  auth_origin_model_test.go  auth_origin_query.go  (+130 more)
plugins/extbench/fixtures/wazero-rust/: Cargo.toml  README.md  build.sh  extension.json
plugins/extbench/fixtures/wazero-rust/src/: lib.rs
(+700 files in other folders)
